--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fluro",
   "version": "1.0.1",
   "description": "Promise based HTTP client for the browser and node.js",
-  "main": "webpack.config.js",
+  "main": "dist/main.js",
   "scripts": {
     "build": "webpack --mode=production && webpack --mode=production && npm run test",
     "dev": "webpack --mode=development --progress --colors --watch",
