--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluro",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "Promise based HTTP client for the browser and node.js",
   "main": "src/index.js",
   "scripts": {
@@ -31,5 +31,9 @@
     "mocha": "^6.1.2",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "axios-extensions": "^3.0.5"
   }
 }
