--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluro",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "description": "Promise based HTTP Fluro client for the browser and node.js",
   "scripts": {
     "build": "webpack --mode=production && webpack --mode=production && npm run test",
@@ -36,10 +36,12 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.4"
   },
-  "dependencies": {
+  "peerDependencies": {
     "axios": "^0.18.0",
     "axios-extensions": "^3.0.5",
-    "lodash": "^4.17.11",
     "moment-timezone": "^0.5.23"
+  },
+  "dependencies": {
+    "lodash": "^4.17.11"
   }
 }
