Added filter service

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluro",
-  "version": "2.0.13",
+  "version": "2.0.15",
   "description": "Promise based HTTP Fluro client for the browser and node.js",
   "scripts": {
     "build": "webpack --mode=production && webpack --mode=production && npm run test",
@@ -40,6 +40,7 @@
     "axios": "^0.18.0",
     "axios-extensions": "^3.0.5",
     "lodash": "^4.17.11",
-    "moment-timezone": "^0.5.26"
+    "moment-timezone": "^0.5.26",
+    "string-similarity": "^3.0.0"
   }
 }
