--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluro",
-  "version": "2.0.47",
+  "version": "2.0.48",
   "description": "Promise based HTTP Fluro client for the browser and node.js",
   "scripts": {
     "build": "webpack --mode=production && webpack --mode=production && npm run test",
@@ -33,12 +33,14 @@
     "jsdoc": "^3.6.3",
     "jsdom": "^14.1.0",
     "mocha": "^6.2.2",
+    "mongoose": "^5.9.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "axios": "^0.18.0",
     "axios-extensions": "^3.0.5",
+    "browser-or-node": "^1.2.1",
     "lodash": "^4.17.15",
     "moment-timezone": "^0.5.27",
     "string-similarity": "^3.0.0"
