--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "fluro",
-  "version": "2.0.69",
+  "version": "2.0.70",
   "description": "Promise based HTTP Fluro client for the browser and node.js",
   "scripts": {
-    "build": "webpack --mode=production && webpack --mode=production && npm run test",
+    "build": "webpack --mode=production && npm run test",
     "dev": "webpack --mode=development --progress --colors --watch",
     "test": "mocha  --colors ./test/*.spec.js",
     "test:watch": "mocha  --colors -w ./test/*.spec.js",
