--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fluro",
-  "version": "2.0.91",
+  "version": "2.0.93",
   "description": "Promise based HTTP Fluro client for the browser and node.js",
   "scripts": {
     "build": "webpack --mode=production && npm run test",
@@ -42,7 +42,8 @@
     "axios-extensions": "^3.1.2",
     "browser-or-node": "^1.2.1",
     "lodash": "^4.17.15",
-    "moment-timezone": "^0.5.27",
+    "moment": "2.18.1",
+    "moment-timezone": "0.5.13",
     "string-similarity": "^3.0.0"
   }
 }
